# gbrs

./: .gitignore  Cargo.toml  README.md  bacon.toml  flake.nix
desktop/: Cargo.toml
desktop/src/: main.rs
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/apu/: mod.rs  noisechannel.rs  squarechannel.rs  wavechannel.rs
engine/src/cpu/: cpu.rs  disasm.rs  execute.rs  implements.rs  mod.rs  registers.rs
engine/src/memory/: bus.rs  cartridge.rs  joypad.rs  mbc1.rs  mbc3.rs  memory.rs  mod.rs  romonly.rs  rtc.rs  serial.rs  timer.rs
engine/src/ppu/: ppu.rs
libretro/: Cargo.toml
libretro/src/: lib.rs
pico/: Cargo.toml
pico/.cargo/: config.toml
pico/examples/: led.rs
pico/src/: main.rs
src/: main.rs
src/apu/: mod.rs  wavechannel.rs
src/cpu/: cpu.rs  disasm.rs  implements.rs  mod.rs  registers.rs
src/memory/: cartridge.rs  interrupts.rs  io.rs  mbc1.rs  mbc3.rs  memory.rs  mod.rs  romonly.rs  timer.rs
src/ppu/: ppu.rs
