[package]
name = "gbrs-pico"
version = "0.1.0"
edition = "2024"

[dependencies]
gbrs-engine = { path = "../engine" }
# rp2040-hal = { version = "0.10", features = ["rt"] }
# embedded-alloc = "0.6"
# defmt = "0.3"
# defmt-rtt = "0.4"
# panic-probe = { version = "0.3", features = ["print-defmt"] }
# cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
# cortex-m-rt = "0.7"

[profile.release]
opt-level = "s"   # ottimizza per dimensione
lto = true
codegen-units = 1
