[package]
name = "gbrs-pico"
version = "0.1.0"
edition = "2024"

[dependencies]
gbrs-engine = { path = "../engine" }
rp2040-hal = { version = "0.12.0", features = ["rt"] }
rp2040-boot2 = "0.3"
embedded-alloc = "0.6"
embedded-hal = "1.0.0"
panic-halt= "1.0.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

[profile.release]
opt-level = "s"   # ottimizza per dimensione
lto = true
codegen-units = 1
